# MIT-Effective-programming-in-C-and-C-

Assignment_1/: CMakeLists.txt
Assignment_1/Problem_1_Floating_Point/: CMakeLists.txt  Problem_1_Floating_Point.c  Problem_1_Floating_Point.cpp  Problem_1_Floating_Point.h
Assignment_1/Problem_2_Matrix_Multiplication/: CMakeLists.txt  Problem_2_Matrix_Multiplication.c
