# CMakeList.txt : CMake project for Problem_1_Floating_Point, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Problem_1_Floating_Point "Problem_1_Floating_Point.c" "Problem_1_Floating_Point.h")

# TODO: Add tests and install targets if needed.
